fixed name overflow on card

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -124,6 +124,7 @@
   align-items: flex-start;
   justify-content: center;
   padding-left: 25px;
+  overflow: hidden;
 }
 
 .name {
